--- a/orionjs_dashboard_materialize.html
+++ b/orionjs_dashboard_materialize.html
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="card-content {{textColor}}-text valign-wrapper">
                         <div class="col s6 m6">
-                            <h3 class="valign center-align">{{getCount count}} <small>Records</small></h3>
+                            <h3 class="valign center-align">{{getCount count}}</h3>
                         </div>
                         <div class="col s6 m6 center-align valign">
                             <i class="large material-icons hoverable">{{icon}}</i>
