--- a/src/orionjs-dashboard-bootstrap.html
+++ b/src/orionjs-dashboard-bootstrap.html
@@ -1,8 +1,8 @@
 <template name="orion_dashboard_bootstrap">
-  {{# Layout template=materializeHeader }}
-    Dashboard
+  {{# Layout template=bootstrapHeader }}
+    <h3 class="title">Dashboard</h3>
   {{/ Layout }}
-  {{# Layout template=materializeContent }}
+  {{# Layout template=bootstrapContent }}
     <div class="row">
       {{#each widgets}}
         {{> Template.dynamic template=template}}
